<!--
  ~
  ~  Copyright (c) Microsoft Corporation. All rights reserved.
  ~  Licensed under the MIT License.
  ~
  -->

<resources>
    <string name="app_name">CompanionPane</string>
    <string name="Filters">Filters</string>
    <string name="Gingham">Gingham</string>
    <string name="Original">Original</string>
    <string name="Lark">Lark</string>
    <string name="Juno">Juno</string>
    <string name="Ludwig">Ludwig</string>
    <string name="straightening">Straightening</string>
    <string name="zero_degrees">0°</string>
    <string name="rotate">Rotate</string>
    <string name="flip">Flip</string>
    <string name="aspect_ratio_custom">Aspect ratio: Custom</string>
    <string name="adjustments">Adjustments</string>
    <string name="light">Light</string>
    <string name="color">Color</string>
    <string name="clarity">Clarity</string>
    <string name="filter">Filter</string>
    <string name="filter_intensity">Filter intensity</string>
    <string name="red_eye">Red eye</string>
    <string name="spot_fix">Spot fix</string>
    <string name="choose_a_filter">Choose a filter</string>
    <string name="reset">Reset</string>
    <string name="magic_wand">Magic Wand</string>
    <string name="definition">Definition</string>
    <string name="vignette">Vignette</string>
    <string name="brightness">Brightness</string>
</resources>
